--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "https://github.com/matt-major/do-wrapper.git"
   },
-  "main": "./dist/do-wrapper.js",
+  "main": "./src/do-wrapper.js",
   "types": "./types/do-wrapper.d.ts",
   "scripts": {
     "build": "gulp compile && npm run doc",
